# PulmNotes

./: RELEASE_NOTES_v0.1.0.md  package-lock.json  package.json  roadmap.md  temp.tsx  test_console.py  v0.2_MILESTONE.md
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml
app/: page.tsx  types.ts
app/components/: BacklinksSidebar.tsx  CommandPalette.tsx  GraphView.tsx  InboxView.tsx  NoteView.tsx  SettingsView.tsx  Sidebar.tsx
app/lib/: storageUtils.ts
app/lib/persistence/: storeFactory.ts
app/quick-capture/: page.tsx
editor/ui/: SlashMenu.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs
