[package]
name = "pulm-notes"
version = "0.0.1"
description = "A personal note taking app"
authors = ["Pulm Notes"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-shell = "2.1"
tauri-plugin-fs = "2.1"
tauri-plugin-process = "2.1"
tauri-plugin-http = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled"] }


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
